--- a/index.html
+++ b/index.html
@@ -47,46 +47,6 @@
     <!-- recipes -->
     <div class="recipes container grey-text text-darken-1">
       <h6 class="center">My Best Recipes</h6>
-      <div class="card-panel recipe white row">
-        <img src="/img/dish.png" alt="recipe thumb" />
-        <div class="recipe-details">
-          <div class="recipe-title">Edame Noodles</div>
-          <div class="recipe-ingredients">Edame Beans, Noodels, Garlic oil</div>
-        </div>
-        <div class="recipe-delete">
-          <i class="material-icons">delete_outline</i>
-        </div>
-      </div>
-      <div class="card-panel recipe white row">
-        <img src="/img/dish.png" alt="recipe thumb" />
-        <div class="recipe-details">
-          <div class="recipe-title">Edame Noodles</div>
-          <div class="recipe-ingredients">Edame Beans, Noodels, Garlic oil</div>
-        </div>
-        <div class="recipe-delete">
-          <i class="material-icons">delete_outline</i>
-        </div>
-      </div>
-      <div class="card-panel recipe white row">
-        <img src="/img/dish.png" alt="recipe thumb" />
-        <div class="recipe-details">
-          <div class="recipe-title">Edame Noodles</div>
-          <div class="recipe-ingredients">Edame Beans, Noodels, Garlic oil</div>
-        </div>
-        <div class="recipe-delete">
-          <i class="material-icons">delete_outline</i>
-        </div>
-      </div>
-      <div class="card-panel recipe white row">
-        <img src="/img/dish.png" alt="recipe thumb" />
-        <div class="recipe-details">
-          <div class="recipe-title">Edame Noodles</div>
-          <div class="recipe-ingredients">Edame Beans, Noodels, Garlic oil</div>
-        </div>
-        <div class="recipe-delete">
-          <i class="material-icons">delete_outline</i>
-        </div>
-      </div>
     </div>
 
     <div class="center">
@@ -132,9 +92,20 @@
 
     <script>
       // Your web app's Firebase configuration
-      var firebaseConfig = {};
+      // var firebaseConfig = {
+      //   apiKey: "AIzaSyA-ekVGFEBpnJPwgPBQJ9qHKsfvSVLBX3M",
+      //   authDomain: "food-app-pwa-4ea73.firebaseapp.com",
+      //   databaseURL: "https://food-app-pwa-4ea73.firebaseio.com",
+      //   projectId: "food-app-pwa-4ea73",
+      //   storageBucket: "food-app-pwa-4ea73.appspot.com",
+      //   messagingSenderId: "257629274940",
+      //   appId: "1:257629274940:web:d39438e263576f29661439",
+      // };
+      /////////resouce for fixed syntax
+      // https://firebase.google.com/docs/firestore/quickstart
+      /////////////////////////////////////
       // Initialize Firebase
-      firebase.initializeApp(config);
+      firebase.initializeApp({});
       const db = firebase.firestore();
     </script>
     <script src="/js/app.js"></script>
