--- a/index.html
+++ b/index.html
@@ -93,19 +93,15 @@
     <script>
       // Your web app's Firebase configuration
       // var firebaseConfig = {
-      //   apiKey: "AIzaSyA-ekVGFEBpnJPwgPBQJ9qHKsfvSVLBX3M",
-      //   authDomain: "food-app-pwa-4ea73.firebaseapp.com",
-      //   databaseURL: "https://food-app-pwa-4ea73.firebaseio.com",
-      //   projectId: "food-app-pwa-4ea73",
-      //   storageBucket: "food-app-pwa-4ea73.appspot.com",
-      //   messagingSenderId: "257629274940",
-      //   appId: "1:257629274940:web:d39438e263576f29661439",
+      //   apiKey: ,
       // };
       /////////resouce for fixed syntax
       // https://firebase.google.com/docs/firestore/quickstart
       /////////////////////////////////////
       // Initialize Firebase
-      firebase.initializeApp({});
+      firebase.initializeApp({
+        a,
+      });
       const db = firebase.firestore();
     </script>
     <script src="/js/app.js"></script>
