adding recipes from the ui

--- a/index.html
+++ b/index.html
@@ -93,15 +93,13 @@
     <script>
       // Your web app's Firebase configuration
       // var firebaseConfig = {
-      //   apiKey: ,
+      //   apiKey: 9",
       // };
       /////////resouce for fixed syntax
       // https://firebase.google.com/docs/firestore/quickstart
       /////////////////////////////////////
       // Initialize Firebase
-      firebase.initializeApp({
-        a,
-      });
+      firebase.initializeApp({});
       const db = firebase.firestore();
     </script>
     <script src="/js/app.js"></script>
